feat: department endpoints
